// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be instantiated with a value 1`] = `
Cell {
  "_value": 1,
  "isValid": true,
}
`;

exports[`can be instantiated without a value 1`] = `
Cell {
  "isValid": true,
  "notes": Set {
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
  },
}
`;
